--- a/linked_list/Cargo.toml
+++ b/linked_list/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "LinkedList"
+name = "linked_list"
 version = "0.1.0"
 authors = ["Chris Coverdale <chris.coverdale24@gmail.com>"]
 edition = "2018"
